# listam-desktop

./: .gitignore  README.md  app.css  eslint.config.mjs  index.html  package-lock.json  package.json
.claude/: launch.json
assets/: listam.icns
design-guide/grocery_list_rounded/: code.html
design-guide/kinetic_minimalist/: DESIGN.md
design-guide/peers_devices_rounded/: code.html
design-guide/personal_ops_overview_rounded/: code.html
design-guide/proposals/: 2026-06-kinetic-minimalist-v2.md
design-guide/system_activity_rounded/: code.html
design-guide/todo_board_rounded/: code.html
design-guide/vault_management_rounded/: code.html
installer/: README.md  build-macos.sh  launcher.sh  make-icns.swift  seed-agent.sh
installer/appling/: CMakeLists.txt  package-lock.json  package.json
src/: backend-boot.mjs  backend-worker.mjs  i18n.mjs  icons.mjs  leaf-bridge-config.mjs  leaf-bridge-manager.mjs  main.mjs  mock-backend.mjs  owner-control.mjs  prefs.mjs  registry.mjs  secret-store.mjs  store.mjs  sync-recovery.mjs  tabler-icons.mjs  ticket.mjs  ui.mjs  undo.mjs  voice-host-worker.mjs
src/store/: board-config-slice.mjs  devices-slice.mjs  labels-slice.mjs  lists-slice.mjs  presence-slice.mjs  sync-slice.mjs
test/: leaf-bridge.test.mjs  nav-library.test.mjs  registry.test.mjs  secret-store.test.mjs  store.test.mjs  sync-recovery.test.mjs  sync.test.mjs  ticket.test.mjs  undo.test.mjs  voice-host-worker.test.mjs
test/helpers/: backend-driver.mjs
test/pear-smoke/: package.json  run-smoke.mjs  smoke.mjs
